<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.splash.SplashFragment">

    <data>
        <variable
            name="viewModel"
            type="com.bosta.task.ui.fragment.main.details.ItemDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar"
            app:showBackBtn="@{true}"
            app:viewModel="@{viewModel}"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/_3sdp">

                <TextView
                    android:id="@+id/textView"
                    style="@style/AppBaseTV"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:textColor="@color/blue_2"
                    android:text="@{viewModel.homeItem.itemBrand}"
                    tools:text="Brand: Toys"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:numStars="5"
                    android:rating="@{viewModel.homeItem.rate}"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:theme="@style/RatingBarStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    tools:rating="5" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/AppBaseTV"
                    android:textColor="@color/blue_2"
                    android:text="@{Integer.toString(viewModel.homeItem.numOfRates)}"
                    tools:text="38"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/AppBlackBoldTV"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="@dimen/_42sdp"
                    android:text="@{viewModel.homeItem.title}"
                    tools:text="Bestway 52222 Wrestling suit for kids"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <ImageView
                        imageRes="@{viewModel.homeItem.image}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_camera_temp_img" />

                    <ImageButton
                        android:id="@+id/share_btn"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:background="@drawable/round_grey_btn_bg"
                        app:srcCompat="@drawable/ic_share" />

                    <ImageButton
                        android:id="@+id/favorite_btn"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:background="@drawable/round_grey_btn_bg"
                        app:srcCompat="@drawable/ic_favorite" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView4"
                    style="@style/AppBaseTV"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:textColor="@color/grey_3"
                    android:text="@string/top_deal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/AppBaseTV"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:textColor="@color/red_1"
                    android:text="@{viewModel.homeItem.itemPriceInEGP}"
                    tools:text="EGP300.00"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/AppBaseTV"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="@string/free_delivery"
                    android:textColor="@color/blue_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/AppBaseTV"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:textColor="@color/black"
                    android:text="@string/for_tomorrow"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/AppBaseTV"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@{viewModel.homeItem.quantityLeft}"
                    tools:text="Only 4 left in stock - order soon."
                    android:textColor="@color/red_1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton3"
                    style="@style/YellowBlueBtn"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/add_to_cart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton4"
                    style="@style/OrangeBlueBtn"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/buy_now"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialButton3" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/AppBaseTV"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/fulfilled_by"
                    android:textColor="@color/grey_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialButton4" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/AppBlackTV"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/amazon"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/AppBaseTV"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="@string/sold_by"
                    android:textColor="@color/grey_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/AppBaseTV"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/amazon_seller"
                    android:textColor="@color/blue_2"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@id/textView11" />

                <TextView
                    android:id="@+id/textView26"
                    style="@style/AppBaseTV"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/add_to_list"
                    android:textColor="@color/blue_2"
                    android:textStyle="bold"
                    android:background="@drawable/tv_transparent_bg"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView11" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/grey_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView26" />

                <TextView
                    android:id="@+id/textView13"
                    style="@style/AppBlackBoldTV"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/AppBlackTV"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/colour"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView15"
                    style="@style/AppBlackTV"
                    android:text="@{viewModel.homeItem.color}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toTopOf="@+id/textView14"
                    tools:text="Red" />

                <TextView
                    android:id="@+id/textView16"
                    style="@style/AppBlackTV"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView22"
                    style="@style/AppBlackTV"
                    android:text="@{viewModel.homeItem.size}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toTopOf="@+id/textView16"
                    tools:text="Large" />

                <TextView
                    android:id="@+id/textView18"
                    style="@style/AppBlackTV"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/material"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView19"
                    style="@style/AppBlackTV"
                    android:text="@{viewModel.homeItem.material}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toTopOf="@id/textView18"
                    tools:text="Plastic" />

                <TextView
                    android:id="@+id/textView20"
                    style="@style/AppBlackTV"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/item_weight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <TextView
                    android:id="@+id/textView21"
                    style="@style/AppBlackTV"
                    android:text="@{viewModel.homeItem.itemWeightInKilos}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toTopOf="@+id/textView20"
                    tools:text="1.51 Kilograms" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/grey_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView21"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>